--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,3 +1,4 @@
+/* HeroesComponent's private CSS styles */
 .heroes {
     margin: 0 0 2em 0;
     list-style-type: none;
@@ -6,43 +7,34 @@
 }
 
 .heroes li {
-    display: flex;
+    position: relative;
+    cursor: pointer;
 }
 
-.heroes button {
-    flex: 1;
-    cursor: pointer;
-    position: relative;
-    left: 0;
+.heroes li:hover {
+    left: .1em;
+}
+
+.heroes a {
+    color: #333;
+    text-decoration: none;
     background-color: #EEE;
     margin: .5em;
-    padding: 0;
+    padding: .3em 0;
+    height: 1.6em;
     border-radius: 4px;
-    display: flex;
-    align-items: stretch;
-    height: 1.8em;
+    display: block;
+    width: 100%;
 }
 
-.heroes button:hover {
+.heroes a:hover {
     color: #2c3a41;
     background-color: #e6e6e6;
-    left: 1em;
 }
 
-.heroes button:active {
+.heroes a:active {
     background-color: #525252;
     color: #fafafa;
-}
-
-
-.heroes button.selected {
-    background-color: black;
-    color: white;
-}
-
-.heroes button.selected:active {
-    background-color: black;
-    color: white;
 }
 
 .heroes .badge {
@@ -52,10 +44,12 @@
     padding: 0.8em 0.7em 0 0.7em;
     background-color: #405061;
     line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    min-width: 16px;
+    text-align: right;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
-}
-
-.heroes .name {
-    align-self: center;
 }
